--- a/css/style.css
+++ b/css/style.css
@@ -71,14 +71,19 @@ input{
 }
 
 .sidebar {
+    width: 200px;
     margin: 0;
     padding: 0;
-    width: 200px;
     background-color: #f1f1f1;
     position: fixed;
     height: 100%;
     overflow: auto;
+    display: flex;
+    align-items: stretch;
+}
 
+.sidebar.ac {
+    width: 50px;
 }
 
 .sidebar a {
@@ -91,19 +96,27 @@ input{
 
 .sidebar a.active {
     background-color: #562a77;
-    color: white;
+    color: white !important;
 
 }
 
 .sidebar a:hover:not(.active) {
     background-color: #555;
-    color: white;
+    color: white !important;
 }
 
-div.content {
+.content {
     overflow-x: auto;
-    margin-right: 200px;
     padding: 1px 16px;
+    margin-right: 200px;
+}
+
+.content.ac {
+    margin-right: 50px;
+}
+
+.delay {
+    transition: all 0.3s;
 }
 
 .pagination{
@@ -127,25 +140,178 @@ div.content {
 
 .pagination a:hover:not(.active) {background-color: #ddd;}
 
+a,
+a:hover,
+a:focus {
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
+.wrapper {
+    display: flex;
+    align-items: stretch;
+    margin: 0;
+    padding: 0;
+}
+
+#tsidebar {
+    min-width: 200px;
+    max-width: 200px;
+    margin-right: -50px;
+    z-index: 100;
+}
+
+#tsidebar a,
+#tsidebar a:hover,
+#tsidebar a:focus {
+    color: inherit;
+}
+
+#tsidebar.ac {
+    margin-right: -200px;
+    z-index: -100;
+}
+
+
+#tsidebar .sidebar-header {
+    padding: 20px;
+}
+
+#tsidebar ul.components {
+    padding: 20px 0;
+}
+
+#tsidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#tsidebar ul li a {
+    padding: 10px;
+    padding-right: 50px;
+    font-size: 1.1em;
+    display: block;
+}
+
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+a[aria-expanded="false"]::before,
+a[aria-expanded="true"]::before {
+    content: '\e259';
+    display: block;
+    position: absolute;
+    right: 20px;
+    font-family: 'Glyphicons Halflings';
+    font-size: 0.6em;
+}
+
+a[aria-expanded="true"]::before {
+    content: '\e260';
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+
+
+
+#isidebar {
+    min-width: 50px;
+    max-width: 50px;
+    /*background: #7386D5;*/
+    /*color: #fff;*/
+
+}
+
+#isidebar a,
+#isidebar a:hover,
+#isidebar a:focus {
+    color: inherit;
+}
+
+#isidebar .sidebar-header {
+    padding: 20px;
+    /*background: #6d7fcc;*/
+}
+
+#isidebar ul.components {
+    padding: 20px 0;
+}
+
+#isidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#isidebar ul li a {
+    padding: 10px;
+    padding-right: 0;
+    font-size: 1.1em;
+    display: block;
+}
+
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+
+#content {
+    padding: 20px;
+    min-height: 100vh;
+
+}
+
+#content p a {
+    color: aliceblue;
+}
+
 @media screen and (max-width: 700px) {
     .logout-date{
         display: none;
-    }
-    .sidebar {
-        width: 100%;
-        height: auto;
-        position: relative;
-        display: -ms-flexbox !important;
-        display: flex !important
-    }
-    .sidebar a {float: left;}
-    div.content {margin-right: 0;}
-}
-
-@media screen and (max-width: 400px) {
-    .sidebar a {
-        text-align: center;
-        float: none;
     }
 }
 
