--- a/css/stu-style.css
+++ b/css/stu-style.css
@@ -286,6 +286,25 @@ body , div , a , td , li {
     box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(0, 0, 0, 0.19);
 }
 
+.intro-delete {
+    margin-top: 10px;
+    margin-left: 16px;
+    margin-bottom: 10px;
+    background-color: #f84f5f;
+    border-radius: 50px;
+    color: #fff;
+    float: left;
+    padding: 0px 30px;
+}
+
+
+.intro-delete:hover{
+    color: #fff;
+    text-decoration: none;
+    background-color: #bb3b4b;
+    box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.2), 0 0px 30px 0 rgba(0, 0, 0, 0.19);
+}
+
 .intro-course .title{
     white-space:nowrap;
     overflow: hidden;
@@ -302,6 +321,266 @@ body , div , a , td , li {
     white-space:nowrap;
     overflow: hidden;
     text-overflow:ellipsis;
+}
+
+.course-title{
+    background-color: #3ab6d4;
+    color: #000;
+    font-size: 1.5em;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    height: 60px;
+    line-height: 60px;
+    padding-right: 20px;
+}
+
+.course-banner{
+    padding: 0;
+    height: 180px;
+    box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.1), 0 0px 30px 0 rgba(0, 0, 0, 0.09);
+    margin: 10px 0;
+}
+.course-banner .banner{
+    padding: 0;
+    height: 100%;
+}
+
+.course-banner .banner img{
+    padding: 0;
+    height: 100%;
+}
+.course-banner .title , .course-banner .teacher{
+    font-size: 1.5em;
+}
+.course-details{
+    box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.1), 0 0px 30px 0 rgba(0, 0, 0, 0.09);
+    margin-top: 10px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    padding: 10px;
+}
+
+.icon{
+    width: 24px;
+}
+
+.border-left{
+    border-left: #1d2124 solid 3px;
+}
+.cost{
+    margin: 20px;
+    background-color: #3ab6d4;
+    border-radius: 10px;
+    text-align: center;
+    padding: 10px;
+    font-size: 2em;
+    position: relative;
+}
+.free{
+    margin: 20px;
+    background-color: #37d437;
+    border-radius: 10px;
+    text-align: center;
+    padding: 10px;
+    font-size: 2em;
+}
+
+input[type=text] {
+    padding: 4px 8px;
+    height: 30px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+    border-radius: 0 10px 10px 0;
+}
+
+.needFileLable {
+    cursor: pointer;
+    border: 1px solid #ccc;
+    border-radius: 0 10px 10px 0;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+    padding: 4px 8px;
+    height: 30px;
+    position: relative;
+    top: 2px;
+
+    /* Style as you please, it will become the visible UI component. */
+}
+
+#neededFile , #receipt , #pictureFile{
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+}
+
+.needFileLable {
+    cursor: pointer;
+    border: 1px solid #ccc;
+    border-radius: 0px 10px 10px 0px;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+    padding: 4px 8px;
+    height: 30px;
+    position: relative;
+    top: 2px;
+
+    /* Style as you please, it will become the visible UI component. */
+}
+
+.btn-test{
+    background-color: #3ab6d4;
+    color: #fff;
+    text-align: center;
+    height: 30px;
+    line-height: 0;
+    border-radius: 10px 0 0 10px;
+}
+
+.topic{
+    display: block;
+    text-align: center;
+    background-color: #3ab6d4;
+    color: #000;
+    border-radius: 0 10px 10px 0;
+    padding: 4px 14px;
+    margin-left: 3px;
+}
+.topic:hover{
+    text-decoration: none;
+    background-color: #3ab6d4;
+    color: #fff;
+    border-radius: 0 10px 10px 0;
+    padding: 4px 14px;
+}
+.brochure{
+    display: block;
+    text-align: center;
+    background-color: #3ab6d4;
+    color: #000;
+    border-radius: 10px 0 0 10px;
+    padding: 4px 14px;
+    margin-right: 3px;
+}
+
+.brochure:hover{
+    text-decoration: none;
+    background-color: #3ab6d4;
+    color: #fff;
+    border-radius: 10px 0 0 10px;
+    padding: 4px 14px;
+}
+.register{
+    margin-top: 10px;
+    width: 100%;
+    display: block;
+    text-align: center;
+    background-color: #f84f5f;
+    color: #fff;
+    border-radius: 10px 10px 10px 10px;
+    padding: 4px 14px;
+}
+.reserve{
+    margin-top: 10px;
+    width: 100%;
+    display: block;
+    text-align: center;
+    background-color: #e1a700;
+    color: #fff;
+    border-radius: 10px 10px 10px 10px;
+    padding: 4px 14px;
+}
+.register:hover{
+    text-decoration: none;
+    color: #fff;
+    box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.2), 0 2px 30px 0 rgba(0, 0, 0, 0.1);
+}
+.reserve:hover{
+    text-decoration: none;
+    color: #fff;
+    box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.2), 0 2px 30px 0 rgba(0, 0, 0, 0.1);
+}
+
+.btns{
+    position: absolute;
+    bottom: 0;
+    width: calc(100% - 20px);
+}
+
+.dis{
+    text-align: center;
+    background-color: #f84f5f;
+    color: #fff;
+    border-radius: 10px 10px 10px 10px;
+    padding: 4px 14px;
+    position: absolute;
+    bottom: -20px;
+    right: -20px;
+    transform: rotate(-30deg);
+    display: none;
+}
+
+.myform{
+    max-width: 500px;
+    border-radius: 10px 10px 10px 10px !important;
+}
+
+.close{
+    height: 50px;
+    line-height: 0px;
+    font-size: 2em;
+    padding: 0 !important;
+    float: left;
+    margin: 0;
+}
+.alert{
+    padding: 0;
+    padding-right: 10px;
+    height: 50px;
+    line-height: 50px;
+}
+
+.collapsible {
+    background-color: white;
+    border: none;
+    border-bottom: #1d2124 2px solid;
+    color: black;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+
+    text-align: right;
+    outline: none;
+    font-size: 15px;
+}
+
+.collapsible-active, .collapsible:hover {
+    background-color: #aaa;
+}
+
+.collapsible:after {
+    content: '\002B';
+    color: black;
+    font-weight: bold;
+    float: left;
+    margin-left: 5px;
+}
+
+.collapsible-active:after {
+    content: "\2212";
+}
+
+.collapsible-content {
+    text-align: right;
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: #f1f1f1;
 }
 
 .footer{
